--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+/* Created by: Jaejun Lee
+* Created on: Mar 2022
+* This file contains the CSS for index.html
+*/
 body {
   background-color: #faffad;
 }
